--- a/1)Notes/10-Data Analysis/Numpy.ipynb
+++ b/1)Notes/10-Data Analysis/Numpy.ipynb
@@ -362,13 +362,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalized data : [-1.41421356 -0.70710678  0.          0.70710678  1.41421356]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Statistical concepts --> Normalization -->process of transforming data into a common scale without \n",
+    "# distorting differences in the range of values\n",
+    "\n",
+    "\n",
+    "# To have a mean of 0 and standard deviation of 1\n",
+    "\n",
+    "data = np.array([1,2,3,4,5])\n",
+    "\n",
+    "# claculate the mean and standard deviation\n",
+    "mean = np.mean(data)\n",
+    "std_dev=np.std(data)\n",
+    "\n",
+    "# Normalize the data \n",
+    "normalized_data=(data - mean) / std_dev\n",
+    "print(\"Normalized data :\", normalized_data)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Statistical concepts --> Normalization\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
