--- a/1)Notes/10-Data Analysis/Numpy.ipynb
+++ b/1)Notes/10-Data Analysis/Numpy.ipynb
@@ -394,6 +394,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 5.5\n",
+      "Median: 5.5\n",
+      "Standard deviation: 2.8722813232690143\n",
+      "VAriance 8.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Claculating mean median standard deviation and variance\n",
+    "data = np.array([1,2,3,4,5,6,7,8,9,10])\n",
+    "# mean\n",
+    "mean= np.mean(data)\n",
+    "print(\"Mean:\",mean)\n",
+    "\n",
+    "# Median\n",
+    "median=np.median(data)\n",
+    "print(\"Median:\",median)\n",
+    "\n",
+    "#Standard deviation\n",
+    "std_dev=np.std(data)\n",
+    "print(\"Standard deviation:\",std_dev)\n",
+    "\n",
+    "#Variance\n",
+    "variance=np.var(data)\n",
+    "print(\"VAriance\",variance)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
