--- a/1)Notes/10-Data Analysis/Numpy.ipynb
+++ b/1)Notes/10-Data Analysis/Numpy.ipynb
@@ -430,10 +430,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False False False  True  True  True]\n",
+      "[6 7 8]\n",
+      "[5 6 7 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logical operations\n",
+    "data=np.array([1,2,3,4,5,6,7,8])\n",
+    "\n",
+    "print(data>5)\n",
+    "print(data[data>5])\n",
+    "print(data[(data>=5)&(data<=8)])\n"
+   ]
   }
  ],
  "metadata": {
