--- a/1)Notes/10-Data Analysis/pandas.ipynb
+++ b/1)Notes/10-Data Analysis/pandas.ipynb
@@ -25,6 +25,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1\n",
+      "1    2\n",
+      "2    3\n",
+      "3    4\n",
+      "4    5\n",
+      "5    6\n",
+      "6    7\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Series --> it is one dimensional array like object\n",
+    "# that can hold any data type. it is similar to coloumn\n",
+    "data = [1,2,3,4,5,6,7]\n",
+    "series=pd.Series(data)\n",
+    "print(series)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
