--- a/1)Notes/10-Data Analysis/pandas.ipynb
+++ b/1)Notes/10-Data Analysis/pandas.ipynb
@@ -79,6 +79,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    12\n",
+       "b    20\n",
+       "c    30\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data=[12,20,30]\n",
+    "index=['a','b','c']\n",
+    "pd.Series(data,index=index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  name  age  Grades\n",
+      "0    a   24      20\n",
+      "1    b   31      30\n",
+      "2    c   20      40\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data frame --> it has multiple rows and coloumns\n",
+    "\n",
+    "# Creating dataframes from dictionary\n",
+    "data={\n",
+    "    'name':['a','b','c'],\n",
+    "    'age':[24,31,20],\n",
+    "    'Grades':[20,30,40]\n",
+    "}\n",
+    "\n",
+    "df=pd.DataFrame(data)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
