--- a/1)Notes/10-Data Analysis/pandas.ipynb
+++ b/1)Notes/10-Data Analysis/pandas.ipynb
@@ -134,6 +134,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  name  age      city\n",
+      "0    a   21      pune\n",
+      "1    b   22     nagar\n",
+      "2    c   24      pune\n",
+      "3    d   23  loanavla\n",
+      "4    e   27      pune\n",
+      "5    f   26    mumbai\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating a dataframes from list of dictionaries\n",
+    "\n",
+    "data =[\n",
+    "    {'name':'a','age':21,'city':'pune'},\n",
+    "    {'name':'b','age':22,'city':'nagar'},\n",
+    "    {'name':'c','age':24,'city':'pune'},\n",
+    "    {'name':'d','age':23,'city':'loanavla'},\n",
+    "    {'name':'e','age':27,'city':'pune'},\n",
+    "    {'name':'f','age':26,'city':'mumbai'}\n",
+    "]\n",
+    "\n",
+    "df=pd.DataFrame(data)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
