--- a/1)Notes/10-Data Analysis/pandas.ipynb
+++ b/1)Notes/10-Data Analysis/pandas.ipynb
@@ -172,7 +172,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.read_csv(sales_data.csv)"
+   ]
   }
  ],
  "metadata": {
