--- a/1)Notes/10-Data Analysis/pandas.ipynb
+++ b/1)Notes/10-Data Analysis/pandas.ipynb
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -964,6 +964,212 @@
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>city</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>22</td>\n",
+       "      <td>pune</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>b</td>\n",
+       "      <td>23</td>\n",
+       "      <td>nagar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>c</td>\n",
+       "      <td>25</td>\n",
+       "      <td>pune</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>d</td>\n",
+       "      <td>24</td>\n",
+       "      <td>loanavla</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>e</td>\n",
+       "      <td>28</td>\n",
+       "      <td>pune</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>f</td>\n",
+       "      <td>27</td>\n",
+       "      <td>mumbai</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  name  age      city\n",
+       "0    a   22      pune\n",
+       "1    b   23     nagar\n",
+       "2    c   25      pune\n",
+       "3    d   24  loanavla\n",
+       "4    e   28      pune\n",
+       "5    f   27    mumbai"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['age']=df['age']+1\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Transaction ID</th>\n",
+       "      <th>Units Sold</th>\n",
+       "      <th>Unit Price</th>\n",
+       "      <th>Total Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>240.00000</td>\n",
+       "      <td>240.000000</td>\n",
+       "      <td>240.000000</td>\n",
+       "      <td>240.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>10120.50000</td>\n",
+       "      <td>2.158333</td>\n",
+       "      <td>236.395583</td>\n",
+       "      <td>335.699375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>69.42622</td>\n",
+       "      <td>1.322454</td>\n",
+       "      <td>429.446695</td>\n",
+       "      <td>485.804469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>10001.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.500000</td>\n",
+       "      <td>6.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>10060.75000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>29.500000</td>\n",
+       "      <td>62.965000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>10120.50000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>89.990000</td>\n",
+       "      <td>179.970000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>10180.25000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>249.990000</td>\n",
+       "      <td>399.225000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>10240.00000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>3899.990000</td>\n",
+       "      <td>3899.990000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Transaction ID  Units Sold   Unit Price  Total Revenue\n",
+       "count       240.00000  240.000000   240.000000     240.000000\n",
+       "mean      10120.50000    2.158333   236.395583     335.699375\n",
+       "std          69.42622    1.322454   429.446695     485.804469\n",
+       "min       10001.00000    1.000000     6.500000       6.500000\n",
+       "25%       10060.75000    1.000000    29.500000      62.965000\n",
+       "50%       10120.50000    2.000000    89.990000     179.970000\n",
+       "75%       10180.25000    3.000000   249.990000     399.225000\n",
+       "max       10240.00000   10.000000  3899.990000    3899.990000"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe() # --> it gives statistical summary"
    ]
   },
   {
