--- a/1)Notes/10-Data Analysis/DataManipulation.ipynb
+++ b/1)Notes/10-Data Analysis/DataManipulation.ipynb
@@ -573,6 +573,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date        False\n",
+       "Category    False\n",
+       "Value        True\n",
+       "Product     False\n",
+       "Sales        True\n",
+       "Region      False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().any() # --> it shows only true when there is any missing value in coloumn\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
