--- a/1)Notes/10-Data Analysis/DataManipulation.ipynb
+++ b/1)Notes/10-Data Analysis/DataManipulation.ipynb
@@ -1793,10 +1793,149 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date             object\n",
+       "Category         object\n",
+       "Value           float64\n",
+       "Product          object\n",
+       "Sales           float64\n",
+       "Region           object\n",
+       "Sales_fillNA    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sale Date</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Sales_fillNA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>A</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Product1</td>\n",
+       "      <td>754.0</td>\n",
+       "      <td>East</td>\n",
+       "      <td>754.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-01-02</td>\n",
+       "      <td>B</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>Product3</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>North</td>\n",
+       "      <td>110.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-01-03</td>\n",
+       "      <td>C</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>Product2</td>\n",
+       "      <td>398.0</td>\n",
+       "      <td>East</td>\n",
+       "      <td>398.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-01-04</td>\n",
+       "      <td>B</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Product1</td>\n",
+       "      <td>522.0</td>\n",
+       "      <td>East</td>\n",
+       "      <td>522.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-01-05</td>\n",
+       "      <td>B</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>Product3</td>\n",
+       "      <td>869.0</td>\n",
+       "      <td>North</td>\n",
+       "      <td>869.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Sale Date Category  Value   Product  Sales Region  Sales_fillNA\n",
+       "0  2023-01-01        A   28.0  Product1  754.0   East         754.0\n",
+       "1  2023-01-02        B   39.0  Product3  110.0  North         110.0\n",
+       "2  2023-01-03        C   32.0  Product2  398.0   East         398.0\n",
+       "3  2023-01-04        B    8.0  Product1  522.0   East         522.0\n",
+       "4  2023-01-05        B   26.0  Product3  869.0  North         869.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Renaming Columns\n",
+    "df=df.rename(columns={'Date':'Sale Date'})\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Change datatypes\n"
+   ]
   }
  ],
  "metadata": {
