--- a/1)Notes/10-Data Analysis/ReadingData.ipynb
+++ b/1)Notes/10-Data Analysis/ReadingData.ipynb
@@ -798,7 +798,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# converting excel file to pickle file \n",
+    "# pickle file --> the process of converting a python object into\n",
+    "# a byte stream it in a file.\n",
+    "# it used in serializing and deserializing a python object structure\n"
+   ]
   }
  ],
  "metadata": {
