--- a/1)Notes/10-Data Analysis/Matplotlib.ipynb
+++ b/1)Notes/10-Data Analysis/Matplotlib.ipynb
@@ -223,7 +223,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# creating multiple plots\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
