new files added

--- a/1)Notes/11-SQLite3/crud_operations_SQLite.ipynb
+++ b/1)Notes/11-SQLite3/crud_operations_SQLite.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +56,13 @@
     "\n",
     "cursorr.execute('''\n",
     "Create  Table if Not Exists employees(\n",
-    "    id Integer Primary key,\n",
+    "    id Integer Primary key,                   \n",
     "    name TExt Not Null,\n",
     "    age Integer,\n",
     "    department text\n",
     "    )\n",
     "\n",
-    "''')\n",
+    "''')   #--> above all are sqlite statements\n",
     "\n",
     "# Commit the changes \n",
     "connection.commit()"
