new files added

--- a/1)Notes/11-SQLite3/crud_operations_SQLite.ipynb
+++ b/1)Notes/11-SQLite3/crud_operations_SQLite.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,24 +37,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating cursor object that iterate through tables and rows\n",
     "\n",
-    "cursorr=connection.cursor()"
+    "cursorrr=connection.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating a table in example.db database\n",
     "\n",
-    "cursorr.execute('''\n",
+    "cursorrr.execute('''\n",
     "Create  Table if Not Exists employees(\n",
     "    id Integer Primary key,                   \n",
     "    name TExt Not Null,\n",
@@ -66,6 +66,65 @@
     "\n",
     "# Commit the changes \n",
     "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inserting the data in sqlite table\n",
+    "\n",
+    "cursorrr.execute('''\n",
+    "Insert Into employees(name,age,department)\n",
+    "                values('vaibhs',20,'ml Engineer')\n",
+    "''')\n",
+    "\n",
+    "cursorrr.execute('''\n",
+    "Insert Into employees(name,age,department)\n",
+    "                values('mark',23,'fullstack Engineer')\n",
+    "''')\n",
+    "\n",
+    "\n",
+    "cursorrr.execute('''\n",
+    "Insert Into employees(name,age,department)\n",
+    "                values('jonh',25,'data Engineer')\n",
+    "''')\n",
+    "\n",
+    "cursorrr.execute('''\n",
+    "Insert Into employees(name,age,department)\n",
+    "                values('peter',22,'ml Engineer')\n",
+    "''')\n",
+    "\n",
+    "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'vaibhs', 20, 'ml Engineer')\n",
+      "(2, 'mark', 23, 'fullstack Engineer')\n",
+      "(3, 'jonh', 25, 'data Engineer')\n",
+      "(4, 'peter', 22, 'ml Engineer')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query the data from table\n",
+    "\n",
+    "cursorrr.execute('Select * from employees')\n",
+    "rows=cursorrr.fetchall()\n",
+    "\n",
+    "# Print the queried data\n",
+    "for row in rows:\n",
+    "    print(row)"
    ]
   },
   {
