new files added

--- a/1)Notes/11-SQLite3/crud_operations_SQLite.ipynb
+++ b/1)Notes/11-SQLite3/crud_operations_SQLite.ipynb
@@ -129,6 +129,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update the data in the table\n",
+    "cursorrr.execute('''\n",
+    "UPDATE employees\n",
+    "Set age=21\n",
+    "where name='vaibhs'\n",
+    "''')\n",
+    "\n",
+    "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'vaibhs', 21, 'ml Engineer')\n",
+      "(2, 'mark', 23, 'fullstack Engineer')\n",
+      "(3, 'jonh', 25, 'data Engineer')\n",
+      "(4, 'peter', 22, 'ml Engineer')\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursorrr.execute('Select * from employees')\n",
+    "rows=cursorrr.fetchall()\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
