new files added

--- a/1)Notes/11-SQLite3/crud_operations_SQLite.ipynb
+++ b/1)Notes/11-SQLite3/crud_operations_SQLite.ipynb
@@ -169,6 +169,109 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete data from table\n",
+    "cursorrr.execute('''\n",
+    "Delete from employees\n",
+    "where name='jonh'\n",
+    "''')\n",
+    "\n",
+    "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'vaibhs', 21, 'ml Engineer')\n",
+      "(2, 'mark', 23, 'fullstack Engineer')\n",
+      "(4, 'peter', 22, 'ml Engineer')\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursorrr.execute('Select * from employees')\n",
+    "rows=cursorrr.fetchall()\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Working Wwith Sales Data\n",
+    "# Connect to an SQLite database\n",
+    "connection = sqlite3.connect('sales_data.db')\n",
+    "cursor = connection.cursor()\n",
+    "\n",
+    "# Create a table for sales data\n",
+    "cursor.execute('''\n",
+    "CREATE TABLE IF NOT EXISTS sales (\n",
+    "    id INTEGER PRIMARY KEY,\n",
+    "    date TEXT NOT NULL,\n",
+    "    product TEXT NOT NULL,\n",
+    "    sales INTEGER,\n",
+    "    region TEXT\n",
+    ")\n",
+    "''')\n",
+    "\n",
+    "# Insert data into the sales table\n",
+    "sales_data = [\n",
+    "    ('2023-01-01', 'Product1', 100, 'North'),\n",
+    "    ('2023-01-02', 'Product2', 200, 'South'),\n",
+    "    ('2023-01-03', 'Product1', 150, 'East'),\n",
+    "    ('2023-01-04', 'Product3', 250, 'West'),\n",
+    "    ('2023-01-05', 'Product2', 300, 'North')\n",
+    "]\n",
+    "\n",
+    "# This is used to insert all data at single commit\n",
+    "cursor.executemany('''\n",
+    "Insert into sales(date,product,sales,region)\n",
+    "                   values(?,?,?,?)\n",
+    "''',sales_data)\n",
+    "\n",
+    "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, '2023-01-01', 'Product1', 100, 'North')\n",
+      "(2, '2023-01-02', 'Product2', 200, 'South')\n",
+      "(3, '2023-01-03', 'Product1', 150, 'East')\n",
+      "(4, '2023-01-04', 'Product3', 250, 'West')\n",
+      "(5, '2023-01-05', 'Product2', 300, 'North')\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute('Select * from sales')\n",
+    "rows=cursor.fetchall()\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
