new files added

--- a/1)Notes/12-Logging in python/Logging_Practical.ipynb
+++ b/1)Notes/12-Logging in python/Logging_Practical.ipynb
@@ -20,11 +20,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:root:This is debug message\n",
+      "INFO:root:This is an info message\n",
+      "WARNING:root:This is a warning message\n",
+      "ERROR:root:this is error message\n",
+      "CRITICAL:root:this is critical message\n"
+     ]
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "\n",
+    "for handler in logging.root.handlers[:]:\n",
+    "    logging.root.removeHandler(handler)\n",
+    "\n",
+    "# Configure the basic logging setings\n",
+    "logging.basicConfig(level=logging.DEBUG)\n",
+    "\n",
+    "# log message with different severity levels\n",
+    "logging.debug(\"This is debug message\")\n",
+    "logging.info(\"This is an info message\")\n",
+    "logging.warning(\"This is a warning message\")\n",
+    "logging.error(\"this is error message\")\n",
+    "logging.critical(\"this is critical message\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Log Levels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DEBUG: Detailed information, typically of interest only when diagnosing problems.\n",
+    "\n",
+    "\n",
+    "INFO: An indication that something unexpected happened or indicative of some problem in the near future(e.g, 'disk space low'). the software is still working as expected.\n",
+    "\n",
+    "ERROR: Due to more serious problem, the software has not been able perform some function\n",
+    "\n",
+    "\n",
+    "CRITICAL: A very serious error, indicating that the program itself may be unable to continue running\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging"
+    "import logging\n",
+    "\n",
+    "# Clear existing logging handlers to avoid conflicts in Jupyter\n",
+    "for handler in logging.root.handlers[:]:\n",
+    "    logging.root.removeHandler(handler)\n",
+    "\n",
+    "# Re-configure logging\n",
+    "logging.basicConfig(\n",
+    "    filename='app.log',\n",
+    "    filemode='w',\n",
+    "    level=logging.DEBUG,\n",
+    "    format='%(asctime)s-%(name)s-%(levelname)s-%(message)s',\n",
+    "    datefmt='%Y-%m-%d %H:%M:%S'\n",
+    ")\n",
+    "\n",
+    "# Test logging\n",
+    "logging.debug(\"This is debug message\")\n",
+    "logging.info(\"This is an info message\")\n",
+    "logging.warning(\"This is a warning message\")\n",
+    "logging.error(\"This is an error message\")\n",
+    "logging.critical(\"This is a critical message\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logging.debug(\"This is debug message\")\n",
+    "logging.info(\"This is an info message\")\n",
+    "logging.warning(\"This is a warning message\")\n",
+    "logging.error(\"This is an error message\")\n",
+    "logging.critical(\"This is a critical message\")"
    ]
   },
   {
