Update Logging multiple loggers.ipynb

--- a/1)Notes/12-Logging in python/Logging multiple loggers.ipynb
+++ b/1)Notes/12-Logging in python/Logging multiple loggers.ipynb
@@ -35,6 +35,19 @@
    "source": [
     "hiii"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "hiii"
+   ]
   }
  ],
  "metadata": {
