--- a/1)Notes/12-Logging in python/Logging multiple loggers.ipynb
+++ b/1)Notes/12-Logging in python/Logging multiple loggers.ipynb
@@ -46,10 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-01-28 09:59:01 - module1 - DEBUG - this is debug message for module1\n",
+      "2025-01-28 09:59:01 - module2 - WARNING - this is warning message for module2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# log message with different loggers\n",
+    "\n",
+    "logger1.debug(\"this is debug message for module1\")\n",
+    "logger2.warning(\"this is warning message for module2\")"
+   ]
   }
  ],
  "metadata": {
